clusters/saradomin/apps/filebrowser/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: filebrowser-upload
  labels:
    app.kubernetes.io/name: filebrowser
    app.kubernetes.io/part-of: file-management
spec:
  buffering:
    maxRequestBodyBytes: 0
