clusters/saradomin/apps/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
    app.kubernetes.io/part-of: file-management
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: filebrowser
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
